# Email_Summarizer_SC

./: .gitignore  CLAUDE.md  CONTEXT.txt  README.md  SQS_Pipeline_context.js  choices_context.json  custom_insertion_sqs.py  implementation_plan.md  logs-vLLM v2.14.0.txt  new_context.txt  pyproject.toml  runpod_context.py  summarizer.txt
docs/: 01-overview.md  02-architecture.md  03-pipeline-and-data-flow.md  04-backend.md  05-api.md  06-database.md  07-security.md  08-deployment.md  09-onboarding.md  10-technical-debt.md
src/summarizer/: composition.py
src/summarizer/adapters/email/: __init__.py  http_email_gateway.py  mysql_email_metadata.py
src/summarizer/adapters/extraction/: __init__.py  extractor.py  handlers.py
src/summarizer/adapters/llm/: runpod_vllm_client.py
src/summarizer/adapters/normalize/: __init__.py  normalizer.py
src/summarizer/adapters/persistence/: mysql_summary_repository.py
src/summarizer/adapters/prompt/: __init__.py  prompt_builder.py
src/summarizer/application/: command.py  result.py  summarize_ticket.py
src/summarizer/config/: logging_config.py  settings.py
src/summarizer/domain/: errors.py  models.py  ports.py
src/summarizer/domain/schema/: v1.py
src/summarizer/entrypoints/: cli.py  sqs_consumer.py
tests/integration/persistence/: test_mysql_summary_repository_integration.py
tests/unit/: test_composition.py
tests/unit/application/: test_summarize_ticket.py
tests/unit/config/: test_logging_config.py  test_settings.py
tests/unit/domain/: test_schema_v1.py
tests/unit/entrypoints/: test_cli.py  test_sqs_consumer.py
(+12 files in other folders)
