[project]
name = "summarizer"
version = "0.1.0"
description = "AI email summarization worker for Stepping Desk (TrackEaseV2DB)"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.13.4",
    "pydantic-settings>=2.9.1",
    "pymysql>=1.2.0",
    "python-dotenv>=1.1.0",
    "requests>=2.32.0",
    "PyMuPDF>=1.25.0",
    "python-docx>=1.1.0",
    "openpyxl>=3.1.0",
    "email-reply-parser>=0.5.12",
    "tiktoken>=0.9.0",
]

[build-system]
requires = ["uv_build>=0.11.21,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "mypy>=2.2.0",
    "pytest>=9.1.1",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.21",
    "testcontainers[mysql]>=4.14.2",
    "types-pymysql>=1.1.0.20260518",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.12"
strict = true
mypy_path = "src"
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = "testcontainers.*"
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-m 'not integration'"
markers = [
    "integration: requires external services (e.g. Docker for testcontainers)",
]
